# MyShell_RFD

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REQUESTS.md  build.sh
migration/: .coverage  AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
migration/scripts/: build.py
migration/src/myshell_rfd/: __init__.py  cli.py
migration/src/myshell_rfd/cli/: install.py  profile.py  rollback.py
migration/src/myshell_rfd/core/: config.py  installer.py  registry.py  shell.py
migration/src/myshell_rfd/modules/: __init__.py  aws.py  cloud.py  kubernetes.py  shell_plugins.py  themes.py  tools.py
migration/src/myshell_rfd/plugins/: __init__.py  loader.py
migration/src/myshell_rfd/tui/: __init__.py  app.py
migration/src/myshell_rfd/tui/screens/: __init__.py  help.py  input.py
migration/src/myshell_rfd/tui/widgets/: __init__.py  module_card.py  status_bar.py
migration/src/myshell_rfd/utils/: __init__.py  process.py
migration/tests/: __init__.py  conftest.py
migration/tests/test_core/: test_config.py  test_detect.py
migration/tests/test_modules/: test_base.py  test_modules.py
scripts/: build.py
src/: main.sh
src/core/: bootstrap.sh  colors.sh  lecho.sh  ui.sh  update.sh  utils.sh
src/modules/: aws.sh  batcat.sh  containers.sh  eksctl.sh  fzf.sh  helm.sh  infracost.sh  k_plugin.sh  kubectl.sh  minikube.sh  nvm.sh  oc.sh  p10k.sh  pls.sh  python.sh  rosa.sh  sops.sh  terraform.sh  terragrunt.sh  tools.sh  tridentctl.sh  vcs.sh  zsh_plugins.sh
src/myshell_rfd/: __main__.py
src/myshell_rfd/cli/: __init__.py  commands.py  install.py  profile.py  rollback.py
src/myshell_rfd/core/: __init__.py  config.py  installer.py  module_base.py  registry.py  rollback.py  shell.py
src/myshell_rfd/modules/: __init__.py  containers.py  kubernetes.py  myshell.py  themes.py  tools.py  vcs.py
src/myshell_rfd/plugins/: example.py
src/myshell_rfd/tui/: app.py
src/myshell_rfd/tui/screens/: confirm.py  main.py  module_selector.py  settings.py
src/myshell_rfd/tui/widgets/: progress_panel.py
src/myshell_rfd/utils/: detect.py  files.py  logger.py
tests/: test_helper.bash
tests/core/: core.bats  utils.bats
tests/modules/: cloud.bats  iac.bats  kubectl.bats  system.bats  tools.bats
tests/test_cli/: test_doctor.py
tests/test_core/: test_config.py  test_detect.py  test_doctor.py  test_files.py  test_registry.py  test_rollback.py  test_shell.py
tests/test_modules/: test_base.py
tests/test_tui/: __init__.py
zsh/: myshell_rfd.sh
zsh/src/: myshell_rfd.sh  p10k.zsh
